# monstorr

./: .gitignore  Cargo.toml  LICENSE  build-data.sh  build-docs.sh
docs/: index.md
docs/rustdoc/: search-index.js  settings.html  source-files.js
documentation/: crates.js  settings.html
documentation/monstorr/: enum.Command.html  enum.TemplateClass.html  index.html  struct.Arguments.html
documentation/monstorr_data/: all.html  sidebar-items.js
monstorr/: Cargo.toml
monstorr-data/: Cargo.toml
monstorr-data/data/: adult_gold_dragon.creature  blocks-template.html  feature-template.html  html-stat-block-template.html  html-styles-fragment.html  spans-template.html
monstorr-data/data/creatures/: adult_gold_dragon.creature  awakened_shrub.creature  awakened_tree.creature  bugbear.creature  commoner.creature  creature_database.rs.inc  dryad.creature  dust_mephit.creature  efreeti.creature  giant_frog.creature  goblin.creature  guard.creature  ice_mephit.creature  imp.creature  magma_mephit.creature  sprite.creature  spy.creature  steam_mephit.creature  thug.creature
monstorr-data/data/templates/html/: html-full-page-template.html  html-stat-block-template.html  tapered-rule.html
monstorr-data/data/templates/latex/: blocks-template.tex  feature-template.tex  latex-stat-block-template.tex  spans-template.tex
monstorr-data/data/templates/plain/: blocks-template.txt  feature-template.txt  plain-stat-block-template.txt  spans-template.txt
monstorr-data/src/: creatures.rs  lib.rs  templates.rs
monstorr-lib/: Cargo.toml
monstorr-lib/src/: actions.rs  attacks.rs  creature.rs  creature_commands.rs  dice.rs  dice_expression.rs  errors.rs  features.rs  interpolation.rs  lib.rs  open5e_convertor.rs  parse_position.rs  reactions.rs  spellcasting.rs  stat_block.rs  stats.rs  structured_text.rs  template.rs  tests.rs  text_escaper.rs  tokenizer.rs  utils.rs
monstorr-open5e/: Cargo.toml
monstorr-open5e/src/: lib.rs
monstorr/src/: main.rs
(+387 files in other folders)
