#
# Copyright © 2022 Neil M. Sheldon
# 
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
# 

[package]
name = "monstorr-lib"
version = "0.1.2"
authors = ["Neil M. Sheldon <neilmsheldon@townsedgetechnology.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monstorr-open5e = { path = "../monstorr-open5e" }
monstorr-data = { path = "../monstorr-data" }
serde = { version = "1.0.130", features = ["derive"]}
ron = "0.7.0"
serde_json = "1.0.79"
minijinja = { version = "0.15.0", features = ["source"]}

[dev-dependencies]
pretty_assertions = "1.1.0"
